DRA-1816 Konsistent brug af enum for platformværdier
